...
        )
    }

    return (
        <View testID="recipe-main-view" style={styles.container}>
            <ImageBackground
                testID="recipe-image"
                source={{ uri: recipe.meal.strMealThumb }}
                style={styles.backgroundImg}
            >
                <View style={styles.detailsView}>
                    <View>
                        <Text
                            testID="recipe-name"
                            style={styles.mealName}
                            ellipsizeMode="tail"
                            numberOfLines={2}
                        >
                            {recipe.meal.strMeal}
                        </Text>
...
                            style={styles.mealArea}
                        >
                            {`${recipe.meal.strArea} Dish`}
                        </Text>
                    </View>
                    <TouchableOpacity
                        testID="add-to-fav"
                        onPress={() => {
                            addFavorites();
                        }}
                    >
                        {
                            isFavorite ? (
                                <Image
                                    testID="liked-image"
                                    source={Images.like1}
                                    style={[styles.like, {
                                        tintColor: COLORS.app_theme
                                    }]}

                                />
                            ) : (
                                <Image
                                    testID="not-liked-image"
                                    source={Images.like}
                                    style={[styles.like, {
                                        tintColor: COLORS.white
                                    }]}
                                />
                            )
...
                <View
                    style={{
                        alignItems: "center"
                    }}
                >
                    <Text
                        testID="ingredients"
                        style={{
                            fontSize: 14,
                            color: step === 0 ? COLORS.app_theme : COLORS.black,
                            fontWeight: step === 0 ? "500" : "400",
                        }}
                        onPress={() => {
...
                <View
                    style={{
                        alignItems: "center"
                    }}
                >
                    <Text
                        testID="directions"
                        style={{
                            fontSize: 14,
                            color: step === 1 ? COLORS.app_theme : COLORS.black,
                            fontWeight: step === 1 ? "500" : "400"
                        }}
                        onPress={() => {
...

            </View>
            <View style={styles.flatListView}>
                {
                    step === 0 ? (
                        <FlatList
                            testID="ingredients-list"
                            data={recipe.meal.ingredientsData}
                            renderItem={renderIngredientList}
                            ItemSeparatorComponent={() => {
                                return (
                                    <View style={styles.separator} />
                                )
...
                            contentContainerStyle={{
                                paddingBottom: 30
                            }}
                        />
                    ) : (
                        <ScrollView
                            testID="directions-list"
                            contentContainerStyle={styles.scrollViewStyle}
                            showsVerticalScrollIndicator={false}
                        >
                            <Text
                                testID="direction-steps"
                                style={styles.directions}
...
