...
            </TouchableOpacity>
        )
    }

    return (
        <MainView isLoading={isLoading}>
            <View testID="home-screen-view" style={styles.container}>
                <Header />
                <ScrollView
                    testID="list-scroll"
                    contentContainerStyle={{
                        paddingBottom: 10
                    }}
                    showsVerticalScrollIndicator={false}
                >
                    <TouchableOpacity
                        testID="search-bar"
                        style={styles.searchView}
                        activeOpacity={0.8}
                        onPress={() => {
                            navigateToSearchScreen();
                        }}
                    >
                        <Text
                            testID="search-input"
                            style={styles.searchText}
                        >
                            Search Recipe...
                        </Text>
                        <Image
                            source={Images.search}
...
                        />
                    </TouchableOpacity>
                    <View style={{
                        paddingLeft: 4
                    }}>
                        <FlatList
                            testID="recipe-list"
                            scrollEnabled={false}
                            data={recipeData}
                            renderItem={renderRecipeList}
                            numColumns={2}
                            contentContainerStyle={{
                                paddingBottom: 10
...
