...
    }

    const emptyListView = () => {
        return (
            <View style={styles.emptyListContainer}>
                <Image
                    testID="empty-fav-image"
                    source={Images.like}
                    style={{
                        height: 50,
                        width: 50
                    }}
                />
                <Text testID="no-fav-text" style={styles.noDataMsg}>
                    No Favorites
                </Text>
            </View>
        )
    }

    return (
        <MainView isLoading={false}>
            <View testID="favorites-screen-view" style={styles.container}>
                <Header />
                <View style={styles.flatListView}>
                    <FlatList
                        testID="fav-list"
                        scrollEnabled={true}
                        data={favoritesData}
                        renderItem={renderRecipeList}
                        numColumns={2}
                        contentContainerStyle={{
                            paddingBottom: 70
...
